-base64 from sun +base64 from java.util